correction du style en version mobile et tablette pour le template biographie

--- a/figureprojectapp/static/css/style.css
+++ b/figureprojectapp/static/css/style.css
@@ -433,13 +433,6 @@ main.bio p {
 	line-height: 1.20em;
 	margin-top:1em;
 	margin-bottom:3em;
-	/*text-align: justify;*/
-	/*word-break: break-word;
-	 -webkit-hyphens: auto;
-	 -moz-hyphens: auto;
-	 -ms-hyphens: auto;
-	 -o-hyphens: auto;
-	hyphens: auto;*/
 }
 
 main.bio {
@@ -447,113 +440,9 @@ main.bio {
 	clear:both;
 }
 
-main.bio section article {
-	padding-top:8em;
+main.bio section {
+	margin-right: 2em;
 }
-
-main.bio section.intro article {
-	padding-top:0em;
-}
-
-section.intro article p:before {
-	position: absolute; 
-    display: block; 
-    content: '';
-    margin-top: -2em;
-    border-top:5px solid #E1001A;
-    width: 2em;
-    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
-}
-
-section.formation article:before {
-	content:'formation / déformation';
-	position: absolute;
-	font-family: "Bebas";
-	font-weight: normal;
-	text-transform: uppercase;
-	margin-top:-2em;
-	padding-bottom:5em;
-	color: #E1001A;
-	line-height: 1em;
-	font-size: 3.5em;
-}
-
-section.formation article p:before {
-	position: absolute; 
-    display: block; 
-    content: '';
-    margin-top: -2em;
-    border-top:5px solid #E1001A;
-    width: 2em;
-    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
-}
-
-section.defigurer article:before {
-	content:'défigurer';
-	position: absolute;
-	font-family: "Bebas";
-	font-weight: normal;
-	text-transform: uppercase;
-	margin-top:-2em;
-	color: #E1001A;
-	line-height: 1em;
-	font-size: 3.5em;
-}
-
-section.defigurer article p:before {
-	position: absolute; 
-    display: block; 
-    content: '';
-    margin-top: -2em;
-    border-top:5px solid #E1001A;
-    width: 2em;
-    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;	
-}
-
-section.detourner article:before {
-	content:'détourner';
-	position: absolute;
-	font-family: "Bebas";
-	font-weight: normal;
-	text-transform: uppercase;
-	margin-top:-2em;
-	color: #E1001A;
-	line-height: 1em;
-	font-size: 3.5em;
-}
-
-section.detourner article p:before {
-	position: absolute; 
-    display: block; 
-    content: '';
-    margin-top: -2em;
-    border-top:5px solid #E1001A;
-    width: 2em;
-    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;	
-}
-
-section.deplacer article:before {
-	content:'déplacer';
-	position: absolute;
-	font-family: "Bebas";
-	font-weight: normal;
-	text-transform: uppercase;
-	margin-top:-2em;
-	color: #E1001A;
-	line-height: 1em;
-	font-size: 3.5em;
-}
-
-section.deplacer article p:before {
-	position: absolute; 
-    display: block; 
-    content: '';
-    margin-top: -2em;
-    border-top:5px solid #E1001A;
-    width: 2em;
-    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;	
-}
-
 
 /* *************************
 			EXTENSION
@@ -922,10 +811,6 @@ main.liens p.contact {
 	main.bio {
 		width:60%;
 		padding-left:25%;
-	}
-
-	main.bio section article {
-		padding-top:10em;
 	}
 
 }
